ajax + json save dep get string cant response object show departments (obj)without one to many in departments dep buttons correct rendering + show dep in table

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -77,4 +77,11 @@ a.btn{
     background-color:#4b8bf5;
     color:#ffffff;
 }
+.alert {
+    padding: 15px;
+    border: 1px solid #d6e9c6;
+    border-radius: 4px;
+    color: #3c763d;
+    background-color: #dff0d8;
+}
 
