ajax + json save dep get string cant response object show departments (obj)without one to many in departments dep buttons correct rendering + show dep in table + don't work knob in table convert jacson department to json ->  @JsonIgnore in getter depTable function modefi style

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -20,10 +20,16 @@ header, main, footer {
     margin-left: 50px;
 
 }*/
+
 td {
     padding: 5px; /* Поля вокруг текста */
     border: 1px solid #78786a; /* Граница вокруг ячеек */
     text-align: right;
+    cursor: pointer;
+}
+
+td:hover {
+    background: #ff6600;
 }
 
 caption{
