ajax + json save dep get string cant response object show departments (obj)without one to many in departments dep buttons correct rendering + show dep in table + don't work knob in table convert jacson department to json ->  @JsonIgnore in getter depTable function  style ok delete button ok edit & override ok complete without employee get list employees add form employee

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -40,12 +40,12 @@ form{
     border: 3px;
     background:none;
     border:none;
-    color: #4b8bf5;
-    font-size:24px
+    color: #ff6600;
+    font-size:17px
 }
-form:hover {
-    text-decoration:underline;
-    cursor:pointer
+
+.submit:hover{
+    background: #ff6600;
 }
 a.btn{
     color: #fff; /* цвет текста */
